--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -24,8 +24,7 @@ body {
     display: flex;
     justify-content: center; /* Центрування по горизонталі */
     align-items: center; /* Центрування по вертикалі */
-    height: 100%;
-    height: 100vh; /* Висота контейнера – 100% висоти вікна */
+    height: 101vh;
 }
 
 .loader {
@@ -35,7 +34,6 @@ body {
     width: 50px;
     height: 50px;
     animation: spin 1s linear infinite; /* Анімація обертання */
-    /* margin: auto;  */
 }
 
 @keyframes spin {
@@ -322,6 +320,10 @@ body {
     border-radius: 5px;
     width: 100%;
     height: auto;
+
+    aspect-ratio: 8 / 8;
+    object-fit: cover;
+    object-position: center;
 }
 
 .grid-item-title {
@@ -504,6 +506,10 @@ body {
     border-radius: 5px;
     width: 100%;
     height: auto;
+
+    aspect-ratio: 8 / 8;
+    object-fit: cover;
+    object-position: center;
 }
 .library-grid-item-description {
     margin: 5px;
@@ -687,6 +693,10 @@ textarea.form-text-field {
     border-radius: 5px;
     width: 100%;
     height: auto;
+
+    aspect-ratio: 8 / 8;
+    object-fit: cover;
+    object-position: center;
 
     margin: auto;
 }
